<resources>
    <string name="app_name">Courses-App</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="about_us">About Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="signup">Sign-up</string>
    <string name="email">Enter Email Address</string>
    <string name="password">Enter Password</string>
    <string name="details">Details</string>
    <string name="test">Test</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_a_new_account">Create A New Account</string>
    <string name="full_name">Enter Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="a_link_to_reset_your_password_will_be_sent_to_your_email_address">*A link to reset
        your password will be sent to your email address</string>
    <string name="reset">Reset</string>
    <string name="age">Age</string>
    <string name="gk_description">General knowledge is information that has been accumulated over
        time through various mediums. It excludes specialized learning that can only be obtained
        with extensive training and information confined to a single medium. General knowledge is an
        essential component of crystallized intelligence. It is strongly associated with general
        intelligence and with openness to experience.
\n\nStudies have found that people who are highly knowledgeable in a particular domain tend to be
        knowledgeable in many. General knowledge is thought to be supported by long-term semantic memory
        ability. General knowledge also supports schemata for textual understanding. In 2019, it was found in
        a survey that New Zealanders had "concerning" gaps in their general knowledge.</string>
    <string name="gk_logo">https://images-na.ssl-images-amazon.com/images/I/61apfSLOGwL.png</string>
    <string name="gk_title">General Knowledge</string>
    <string name="literature_title">Literature</string>
    <string name="literature_logo">https://cdn-icons-png.flaticon.com/512/5780/5780976.png</string>
    <string name="literature_description">Literature, a body of written works. The name has traditionally
        been applied to those imaginative works of poetry and prose distinguished by the intentions of
        their authors and the perceived aesthetic excellence of their execution. Literature may be
        classified according to a variety of systems, including language, national origin, historical
        period, genre, and subject matter.
\n\nFor historical treatment of various literatures within geographical regions, see such articles as
        African literature, African theatre, Oceanic literature, Western literature, Central Asian arts,
        South Asian arts, and Southeast Asian arts. Some literatures are treated separately by language,
        by nation, or by special subject </string>
    <string name="science_title">Science</string>
    <string name="science_logo">https://cdn-icons-png.flaticon.com/512/2941/2941552.png</string>
    <string name="science_description">Science education is the teaching and learning of science to
        non-scientists, such as school children, college students, or adults within the general public.
        The field of science education includes work in science content, science process (the scientific
        method), some social science, and some teaching pedagogy.
        \n\nThe standards for science education provide expectations for the development of understanding
        for students through the entire course of their K-12 education and beyond. The traditional subjects
        included in the standards are physical, life, earth, space, and human sciences.</string>
    <string name="computers_title">Computer Science</string>
    <string name="computer_logo">https://cdn-icons.flaticon.com/png/512/4025/premium/4025644.png?token=exp=1650693980~hmac=2fc21bbcc162bcb5f11744c679ce101e</string>
    <string name="computer_description">Computer science is the study of algorithmic processes,
        computational machines and computation itself. As a discipline, computer science spans a range
        of topics from theoretical studies of algorithms, computation and information to the practical
        issues of implementing computational systems in hardware and software.
        \n\nThis course covers  the history and present status of computers, computing systems, and
        their applications. The concepts of algorithms, structured programming and event-driven
        programming for problem solving will be studied.  The Visual BASIC programming language with
        the topics of variables, assignments, conditions, loops, graphical user interfaces, controls,
        and processing scripts are covered.</string>
    <string name="math_title">Mathematics</string>
    <string name="math_logo">https://cdn-icons-png.flaticon.com/512/2861/2861734.png</string>
    <string name="math_description">Topics in mathematics that every educated person needs to know
        to process, evaluate, and understand the numerical and graphical information in our society.
        Applications of mathematics in problem solving, finance, probability, statistics, geometry, population growth.
    \n\nThis course offers students new insights into important and widely used mathematical concepts,
        with a strong focus on numerical and algebraic relationships.</string>
    <string name="history_title">History</string>
    <string name="history_des">History is the study of change over time, and it covers all aspects
        of human society. Political, social, economic, scientific, technological, medical, cultural,
        intellectual, religious and military developments are all part of history.
    \n\nThis course looks at the history of famous archaeological discoveries around the world and
        how those discoveries have helped us to understand our shared past and cultural heritage.</string>
    <string name="history_logo">https://cdn-icons-png.flaticon.com/512/2332/2332918.png</string>
    <string name="empty">Empty Fields!!!</string>
    <string name="confirm_error">Confirm Password is not same as Password</string>
    <string name="invalid_email">Invalid Email Address</string>
    <string name="name_error">Full Name Required</string>
    <string name="email_error">Email Address Required</string>
    <string name="age_error">Age Required</string>
    <string name="confirm_pwd_error">Confirm Password Required</string>
    <string name="pwd_error">Password Required</string>
    <string name="short_pwd">Password has to be 6 Characters long</string>
    <string name="already_have_an_account_login">Already Have An Account? Login</string>
    <string name="register_success">Registered Successfully</string>
    <string name="failed_register">Failed To Register User : </string>
    <string name="no_internet">No Internet</string>
    <string name="firebase_table_name">Users</string>
    <string name="reset_success">Reset Link has been sent Successfully</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="user_pref">UserPref</string>
    <string name="is_logged_in">isLoggedIn</string>
    <string name="about_us_des">The About Us page of your site is the page where you get to talk
        about yourself and present how awesome of a person you are. It’s the place that gives you
        the opportunity to talk about what you do and why it matters.
\n\n\nEvery successful entrepreneur knows that a well-designed About Us page brings ‘all the boys
        and gals in the yard’ which means that it acts as the first point of contact between the ‘creator’
        and the ‘receiver’ or else in marketing terms, the ‘seller’ and the ‘buyer’.</string>
    <string name="option_a">option a</string>
    <string name="option_b">option b</string>
    <string name="option_c">option c</string>
    <string name="option_d">option d</string>
    <string name="question">Question</string>
    <string name="submit">Submit</string>
    <string name="result">Result</string>
    <string name="your_score">Your Score</string>
    <string name="score_out_of_5">\ out of 5</string>
    <string name="lock">Lock</string>
    <string name="submit_all_ans">Please Submit All The Answers</string>
    <string name="show_result">Show Result</string>
    <string name="made_by">Made By</string>
    <string name="this_application_is_made_by">This Application is made by Hemal Brahmbhatt. Contact Info: \nPhone : 9913635839\nEmail : hemal.brahmbhatt@brainvire.com</string>
    <string name="retry">Retry</string>
    <string name="leave_test_msg">Are You Sure Do You Want to Leave The Test ?</string>
    <string name="leave_test">Leave The Test</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="out_of_5">Out of 5</string>
    <string name="attempted">Attempted : </string>
    <string name="correct">Correct : </string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="select_ans">Please Select Answer</string>
    <string name="notification">Notification</string>
    <string name="more">More</string>
    <string name="question_r">Question :</string>
    <string name="your_ans">Your Ans :</string>
    <string name="correct_ans">Correct Ans :</string>
    <string name="subject">Subject :</string>
    <string name="date_time">Date &amp; Time</string>
    <string name="test_history">Test History</string>
    <string name="firebase_history_name">Result</string>
    <string name="logout_msg">Are You Sure You Want to Logout?</string>
    <string name="last_test">*Last Test:</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset Password</string>
    <string name="show_notification">Show Notification</string>
</resources>