<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.TestFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_test_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/view_margin"
                android:text="@string/app_name"
                android:textColor="@color/primaryColor"
                android:textSize="@dimen/txt_size" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="@dimen/pager_size"
                android:layout_below="@id/txt_test_title"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/view_margin_small"
                android:layout_marginTop="@dimen/view_margin_small"
                android:layout_marginEnd="@dimen/view_margin_small"
                android:layout_marginBottom="@dimen/view_margin_small" />

            <ProgressBar
                android:id="@+id/progress_bar_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_test_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/view_margin" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_no_internet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_test_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/view_margin"
                android:text="@string/no_internet"
                android:textColor="@color/primaryDarkColor"
                android:textSize="@dimen/txt_size"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_no_internet"
                android:layout_centerHorizontal="true"
                android:text="@string/retry"
                android:visibility="gone" />
        </RelativeLayout>
    </ScrollView>
</layout>